--- a/style.css
+++ b/style.css
@@ -16,9 +16,15 @@ body{
 
 .wrapper{
     width: 450 px;
+    height: 288px;
     padding: 30px;
     background: #fff;
     border-radius: 9px;
+    transition: height 0.2s ease;
+}
+
+.wrapper.active{
+    height: 537px;
 }
 
 .wrapper .upload-box{
@@ -53,7 +59,15 @@ body{
 }
 
 .wrapper .content{
+    opacity: 0;
     margin-top: 28px;
+    pointer-events: none;
+}
+
+.wrapper.active .content{
+    opacity: 1;
+    pointer-events: auto;
+    transition: opacity 0.5s 0.05s ease;
 }
 
 .content .row{
